[fix] step1 스트림, 람다 과제를 개선하라
피드백 기반으로 @FunctionalInterface 사용 및 자바 9의 List.of,
메서드 개선을 합니다